# umundo

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README  README.md  config.h.in  wscript
core/: CMakeLists.txt  README.md
core/bindings/: CMakeLists.txt
core/bindings/swig/: CMakeLists.txt
core/bindings/swig/csharp/: umundocore.i
core/bindings/swig/java/: CMakeLists.txt  autoloadJNI.i  umundocore.i
core/bindings/umundo-objc/core/: UMPublisher.h  UMSubscriber.h  UMSubscriber.mm
core/contrib/: beautifyCode.sh  build-avahi-android.sh  build-avahi-linux.sh  build-bonjour-android.sh  build-umundo-android.sh  build-umundo-ios.sh  build-zeromq-android.sh  build-zeromq-ios.sh  build-zeromq-linux.sh  build_umundo_ios.sh  build_zeromq_ios.sh  find-android-ndk.sh
core/contrib/archives/: mDNSResponder-333.10.android.patch
core/contrib/bindings/android/: .classpath  .project
core/contrib/bindings/java/: .classpath
core/contrib/bindings/objc/: uPublisher.h  uPublisher.mm  uSubscriber.h  uSubscriber.mm
core/contrib/cmake/: CrossCompile-Android.cmake  CrossCompile-Android2.cmake  CrossCompile-iOS-Sim.cmake  CrossCompile-iOS.cmake  FindAvahi.cmake  FindBonjour.cmake  FindBoostiOS.cmake  FindPThread.cmake  FindZeroMQ.cmake
core/contrib/prebuilt/include/boost/: Headers
core/contrib/swig/java/: CMakeLists.txt  Test.h  test.i  umundo.i  umundocore.i
core/docs/: CMakeLists.txt  Doxyfile
core/include/: umundo.h
core/include/common/: Debug.h  EndPoint.h  Message.h  Node.h  NodeStub.h  portability.h  stdInc.h
core/include/connection/: Publisher.h  Subscriber.h
core/include/connection/zeromq/: ZeroMQMessage.h  ZeroMQNode.h  ZeroMQPublisher.h
core/include/discovery/: Discovery.h  NodeQuery.h
core/include/discovery/avahi/: AvahiNodeDiscovery.h  AvahiNodeStub.h
core/include/discovery/bonjour/: BonjourNodeDiscovery.h  BonjourNodeStub.h
core/include/thread/: Thread.h
core/lib/darwin-i386/gnu/: libumundoSwig.jnilib  libumundocoreSwig.jnilib
core/lib/windows-x86/msvc/MinSizeRel/: umundocore.lib
core/src/: CMakeLists.txt  config.h.in
core/src/common/: Common.h  Debug.cpp  Debug.h  EndPoint.cpp  EndPoint.h  Factory.cpp  Factory.h  Implementation.h  Message.cpp  Message.h  Node.cpp  Node.h  NodeStub.cpp  NodeStub.h  ResultSet.h  portability.cpp  portability.h  stdInc.h
core/src/connection/: Publisher.cpp  Publisher.h  Subscriber.cpp  Subscriber.h
core/src/connection/zeromq/: ZeroMQMessage.h  ZeroMQNode.cpp  ZeroMQNode.h  ZeroMQPublisher.cpp  ZeroMQPublisher.h  ZeroMQSubscriber.cpp  ZeroMQSubscriber.h
core/src/discovery/: Discovery.cpp  Discovery.h  NodeQuery.cpp  NodeQuery.h
core/src/discovery/avahi/: AvahiNodeDiscovery.cpp  AvahiNodeDiscovery.h  AvahiNodeStub.cpp  AvahiNodeStub.h
core/src/discovery/bonjour/: BonjourNodeDiscovery.cpp  BonjourNodeDiscovery.h  BonjourNodeStub.cpp  BonjourNodeStub.h
core/src/serialization/: Serializer.h.todo
core/src/serialization/protobuf/: PBSerializer.h
core/src/thread/: Thread.cpp  Thread.h
core/src/thread/pthread/: Thread.cpp.old  Thread.h.old
core/src/thread/win32/: Thread.cpp.old  Thread.h.old
core/src/umundo/: CMakeLists.txt  core.h
core/src/umundo/common/: Common.h  Debug.cpp  Debug.h  EndPoint.h  Factory.cpp  Factory.h  Implementation.h  Message.h  Node.cpp  Node.h  NodeStub.cpp  NodeStub.h  ResultSet.h  UUID.cpp  UUID.h  portability.cpp  portability.h
core/src/umundo/connection/: Node.cpp  Node.h  Publisher.cpp  Publisher.h  Subscriber.cpp  Subscriber.h
core/src/umundo/connection/zeromq/: ZeroMQNode.cpp  ZeroMQNode.h  ZeroMQPublisher.cpp  ZeroMQPublisher.h  ZeroMQSubscriber.cpp  ZeroMQSubscriber.h
core/src/umundo/discovery/: Discovery.cpp  Discovery.h  NodeQuery.cpp  NodeQuery.h
core/src/umundo/discovery/avahi/: AvahiNodeDiscovery.cpp  AvahiNodeDiscovery.h  AvahiNodeStub.cpp  AvahiNodeStub.h
core/src/umundo/discovery/bonjour/: BonjourNodeDiscovery.cpp  BonjourNodeDiscovery.h  BonjourNodeStub.cpp  BonjourNodeStub.h  mDNSEmbedded.c
core/src/umundo/thread/: Thread.cpp  Thread.h
core/test/: CMakeLists.txt  test-pingpong.cpp
core/test/discovery/: CMakeLists.txt  test-api.cpp  test-discovery.cpp  test-domain.cpp  test-domains.cpp  test-publisher-churn.cpp
core/test/thread/: CMakeLists.txt  test-threads.cpp
core/test/transmission/: CMakeLists.txt  test-message-transmission.cpp
core/tools/: CMakeLists.txt  test-pingpong.cpp  umundo-monitor.cpp  umundo-pingpong.cpp
rpc/: CMakeLists.txt
rpc/interfaces/protobuf/: Service.proto
rpc/services/protobuf/: EchoService.proto
rpc/src/umundo/: CMakeLists.txt  rpc.h
rpc/src/umundo/protoc-rpc/: ServiceGenerator.cpp  ServiceGenerator.h  ServiceGeneratorCPP.cpp  ServiceGeneratorCPP.h  ServiceGeneratorJava.cpp  ServiceGeneratorJava.h
rpc/src/umundo/rpc/: Service.cpp  Service.h  ServiceManager.cpp  ServiceManager.h
rpc/test/: CMakeLists.txt
rpc/test/services/: test-api.cpp
s11n/: CMakeLists.txt
s11n/ifc/: um_message.proto  um_typed_message.proto
s11n/interfaces/protobuf/: Pose.proto  custom_typed_message.proto  typed_message.proto  um_message.proto
s11n/src/: CMakeLists.txt  Factory.cpp  Factory.h  TypedPublisher.cpp  TypedPublisher.h  TypedSubscriber.h  config.h.in
s11n/src/protobuf/: PBSerializer.cpp  PBSerializer.h
s11n/src/s11n/: TypedPublisher.cpp  TypedPublisher.h  TypedSubscriber.cpp  TypedSubscriber.h
s11n/src/s11n/protobuf/: PBDeserializer.cpp  PBDeserializer.h  PBSerializer.cpp  PBSerializer.h
s11n/src/umundo/: s11n.h
s11n/src/umundo-objc/: s11n.h
s11n/src/umundo-objc/s11n/: UMTypedPublisher.h  UMTypedPublisher.mm  UMTypedSubscriber.h  UMTypedSubscriber.mm
s11n/src/umundo/s11n/: TypedPublisher.cpp  TypedPublisher.h  TypedSubscriber.cpp  TypedSubscriber.h
s11n/src/umundo/s11n/protobuf/: PBDeserializer.cpp  PBDeserializer.h  (+2 more)
s11n/test/: CMakeLists.txt  test-api.cpp
util/: CMakeLists.txt
util/src/umundo/: CMakeLists.txt  util.h
util/src/umundo/util/: Base64.cpp  DirectoryMonitor.cpp  DirectoryMonitor.h  Regex.cpp
util/test/: CMakeLists.txt  test-directory-monitoring.cpp  test-structured-cache.cpp
(+197 files in other folders)
